--- a/index.html
+++ b/index.html
@@ -1,63 +1,28 @@
 <!DOCTYPE html>
 <html>
 
-
 <head>
     <meta charset="utf-8" />
-    <title>Stunde der Wintervögel - Beobachtungen</title>
+    <title>NABU Location-Picker</title>
+    <input label="loc-in-lat" id="loc-in-lat" type"number" class="loc-in loc-txtfield"></input>
+    <input label="loc-in-lng" id="loc-in-lng" type"number" class="loc-in loc-txtfield"></input>
+    <input label="loc-out-lat" id="loc-out-lat" type"number" class="loc-txtfield"></input>
+    <input label="loc-out-lng" id="loc-out-lng" type"number" class="loc-txtfield"></input>
     <meta name=viewport content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/spinner.css" />
-    <link rel="stylesheet" type="text/css" href="css/selectize.css" />
     <link rel="stylesheet" href="css/leaflet.defaultextent.css" />
     <link rel="stylesheet" href="css/leaflet.css" />
-    <link rel="stylesheet" href="css/nprogress.css" />
-    <link rel="stylesheet" href="css/easy-button.css" />
     <link rel="stylesheet" href="css/app.css?v99" />
-
-
 </head>
 
 <body>
-
     <div id="map"></div>
-    <div class="sandbox">
-    <select id="select-action" placeholder="Aktion auswählen...">
-        <option value="">Aktion auswählen ...</option>
-        <option value="sdw">Stunde der Wintervögel</option>
-        <option value="sdg">Stunde der Gartenvögel</option>
-    </select>
-    <select id="select-year" placeholder="Jahr auswählen...">
-    </select>
-    <select id="select-bird" placeholder="Vogelart auswählen..."></select>
-</div>
-    <div class="country-name"></div>
-
-    <div class="mySpinner spinner" id="mySpinner"></div>
-
-    <script src="js/es5-shim.min.js"></script>
-    <script src="js/es5-sham.min.js"></script>
-
-    <script src="js/es6-promise.auto.min.js"></script>
     <script src="js/leaflet.js"></script>
     <script src="js/leaflet.ajax.min.js"></script>
     <script src="js/leaflet.defaultextent.js"></script>
-    <script src="js/easy-button.js"></script>
-    <script src="js/mustache.min.js"></script>
-    <script src="js/nprogress.js"></script>
     <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/selectize.min.js"></script>
     <script src="js/topojson.min.js"></script>
 
-    <script src="js/papaparse.min.js"></script>
-    <script src="js/d3-array.v1.min.js"></script>
-    <script src="js/d3-collection.v1.min.js"></script>
-    <script src="js/d3-color.v1.min.js"></script>
-    <script src="js/d3-format.v1.min.js"></script>
-    <script src="js/d3-interpolate.v1.min.js"></script>
-    <script src="js/d3-scale.v1.min.js"></script>
-    <script src="js/d3-selection.v1.min.js"></script>
-    <script src="js/app.js?v2021"></script>
-
+    <script src="js/app.js"></script>
 </body>
 
 </html>
